# ButterflyBlades

./: .gitignore  CMakeLists.txt  README.md
config/: virus_db_public.json
console/: console_client.cpp
include/common/: platform.h  types.h
include/core/: core.h  module_interface.h
scripts/: build_windows.ps1
src/core/: main.cpp  module_manager.cpp
src/modules/integrity_check/: integrity_check.cpp
src/modules/popup_blocker/: popup_blocker.cpp
src/modules/process_monitor/: process_monitor.cpp
src/modules/remote_console/: remote_console.cpp
src/modules/self_protect/: self_protect.cpp
src/modules/thread_monitor/: thread_monitor.cpp
src/modules/virus_scan/: virus_scan.cpp
src/platform/linux/: linux_platform.cpp
src/platform/windows/: windows_platform.cpp
